Fixed homepage spacing

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -55,16 +55,12 @@ background:  rgb(21, 36, 70) ;
 }
 
 h1{
-    height: 75vh;
-    display: flex;
-    flex-direction: column;
     text-align: center;
     align-items: center;
     justify-content: center;
-    /* border: 2px solid powderblue; */
     padding: 0 10%;
-    padding-bottom: 200px;
-    margin-top: 200px;
+    padding-bottom: 180px;
+    margin-top: 160px;
     font-size: 80px;
     font-weight: 870;
 
@@ -80,37 +76,43 @@ h2{
     margin: 0px 10% 20px 10%;
     text-align: center;
 }
+.summary{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding-bottom: 100px;
+}
 .summary h2{
     font-size: 50px;
-    margin: 0px 10% 20px 10%;
     text-align: left;
 }
 
 .summary img{
-    float: right;
-    display: flex;
     margin-top: 0px;
-    margin-right: 50px;
-    margin-left: 30px;
-    height: 60vh;
+    height: 400px;
     border-radius: 10px;
+    margin-left: 50px;
+
 
 }
-.summary{
-    /*display: inline-flex;*/
-    align-items: center;
-    padding-bottom: 300px;
+.summary div{
+    padding-right:50px;
+    font-size: 35px;
+    width: 600px;
+    margin-left: 10px ;
+    overflow: hidden;
 }
 .highlights{
     display: flex;
     flex-direction: row;
-    gap: 50px;
+    gap: 40px;
     justify-content: center;
 }
 .highlights div{
     border-color: aliceblue;
     border-style: solid;
-    width: 25%;
+    width: 350px;
     margin-bottom: 50px;
     display: flex;
     flex-direction: column;
@@ -120,12 +122,12 @@ h2{
     margin-top: 15px;
     margin-bottom: -10px;
     text-align: center;
-    font-size: 30px;
-    font-size: 3.5vw;
+    font-size: 300%;
 }
 .highlights div img{
     margin: 10px;
     border-radius:5px ;
+    
 }
 .highlights div a{
     align-self: center;
@@ -146,7 +148,7 @@ h2{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 3%;
+    gap: 35px;
     margin-bottom: 50px;
 }
 .buttons a{
@@ -157,34 +159,35 @@ h2{
     border-radius: 15px;
     background: #2368CC;
     background: radial-gradient(at left top, #2368CC, #103898);
-    width: 15%;
-    height: 15vw;
+    width: 200px;
+    height: 195px;
 }
 
 
 .buttons :hover{
     background: radial-gradient(at left top, #2d79ec, #1341ab);
-    width: 16%;
+    width: 220px;
     transition: all 0.2s;
-    height: 16vw;
+    height: 215px;
     margin-top: -0.5vw;
     border-radius: 19px;
+    font-size: 115%;
 }
 .buttons a img{
     align-self: center;
     width: 70%;
-    padding-top: 1vw;
-    padding-bottom: 1vw;
+    padding-top: 15px;
+    padding-bottom: 13px;
     pointer-events: none;
 }
 .buttons a p{
 
     align-self: center;
     text-align: center;
-    font-size: 1.9vw;
+    font-size: 140%;
     font-weight: 700;
     overflow: hidden;
-    margin-top: -1vw;
+    margin-top: -10px;
     pointer-events: none;
 
 }
